--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,9 @@ def ROBOT_MAIN_CLASS = "frc.robot.Main"
 
 // Define my targets (RoboRIO) and artifacts (deployable files)
 // This is added by GradleRIO's backing project EmbeddedTools.
+
+
+
 deploy {
     targets {
         roboRIO("roborio") {
@@ -56,6 +59,10 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     compile 'com.github.Team319:BobTrajectory:master-SNAPSHOT'
 
+    implementation "frckit.tools:pathview:0.0.30"
+    implementation "frckit.lib:util:0.0.24"
+    implementation "frckit.lib:pvision:0.0.22"
+
 
     // Enable simulation gui support. Must check the box in vscode to enable support
     // upon debugging
@@ -73,3 +80,8 @@ jar {
       jcenter()
       maven { url "https://jitpack.io" }
    }
+   repositories {
+    maven {
+        url "http://maven.came20.net/artifactory/devel"
+    }
+}
