--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,73 +4,18 @@
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
-    {
-      "type": "java",
-      "name": "Launch RunAutoNavSlalom",
-      "request": "launch",
-      "mainClass": "frc.robot.commands.RunAutoNavSlalom",
-      "projectName": "2021Season"
-    },
-    {
-      "type": "java",
-      "name": "Launch RunAutoNavBarrelRacing",
-      "request": "launch",
-      "mainClass": "frc.robot.commands.RunAutoNavBarrelRacing",
-      "projectName": "2021Season"
-    },
-    {
-      "type": "java",
-      "name": "Launch RunAutoNavBounce",
-      "request": "launch",
-      "mainClass": "frc.robot.commands.RunAutoNavBounce",
-      "projectName": "2021Season"
-    },
-    {
-      "type": "java",
-      "name": "Launch RunHyperdriveLightspeedCircuit",
-      "request": "launch",
-      "mainClass": "frc.robot.commands.RunHyperdriveLightspeedCircuit",
-      "projectName": "2021Season"
-    },
-    {
-      "type": "java",
-      "name": "Launch RunAutoNavBounce",
-      "request": "launch",
-      "mainClass": "frc.robot.commands.RunAutoNavBounce",
-      "projectName": "2021Season-4"
-    },
-    {
-      "type": "java",
-      "name": "Launch RunAutoNavBarrelRacing",
-      "request": "launch",
-      "mainClass": "frc.robot.commands.RunAutoNavBarrelRacing",
-      "projectName": "2021Season-4"
-    },
-    {
-      "type": "java",
-      "name": "Launch RunAutonStraightMeter",
-      "request": "launch",
-      "mainClass": "frc.robot.commands.RunAutonStraightMeter",
-      "projectName": "2021Season-4"
-    },
-    {
-      "type": "java",
-      "name": "Launch RunAutoNavSlalom",
-      "request": "launch",
-      "mainClass": "frc.robot.commands.RunAutoNavSlalom",
-      "projectName": "2021Season-4"
-    },
+
     {
       "type": "wpilib",
       "name": "WPILib Desktop Debug",
       "request": "launch",
-      "desktop": true
+      "desktop": true,
     },
     {
       "type": "wpilib",
       "name": "WPILib roboRIO Debug",
       "request": "launch",
-      "desktop": false
+      "desktop": false,
     }
   ]
 }
